# KR-CProgramming-Ex

./: .gitignore  CMakeLists.txt  README.md  file-diff  file1.txt  file2.txt  heap_sort.c  heap_sort.h  main.c  mycat  toupper
ch2/: ch2.c  ch2.h  ch2_test.c  ch2_test.h
ch3/: ch3.c  ch3.h  ch3_test.c  ch3_test.h
ch4/: calc.c  calc.h  ch4.c  ch4.h  ch4_test.c  ch4_test.h  getch.c  getop.c  stack.c
ch5/: ch5.h  exerch5.c  testch5.c
ch6/: ch6.h  exerch6.c  input.txt  testch6.c
ch7/: a.txt  b.txt  ch7.h  exerch7.c  testch7.c
ch8/: ch8.h  exerch8.c  testch8.c
