cmake_minimum_required(VERSION 3.15)
project(KR_CProgramming C)

set(CMAKE_C_STANDARD 99)

add_executable(KR_CProgramming main.c ch2/ch2.c ch2/ch2.h ch2/ch2_test.c ch2/ch2_test.h ch3/ch3.c ch3/ch3.h ch3/ch3_test.c ch3/ch3_test.h ch4/ch4.c ch4/ch4.h ch4/ch4_test.c ch4/ch4_test.h ch4/calc.c ch4/calc.h ch4/stack.c ch4/getop.c ch4/getch.c ch5/exerch5.c ch5/ch5.h ch5/testch5.c)